<resources>
    <string name="app_name">CoreVises</string>

    <!-- Login Strings-->
    <string name="titleLogin">CoreVises</string>
    <string name="textViewMessageLogin">Iniciar Sesión</string>
    <string name="hintEmailLogin">Email</string>
    <string name="hintPasswordLogin">Password</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="textViewMessageRegister">Registrarse</string>

    <!-- Register Strings-->
    <string name="titleRegister">Registrarse</string>
    <string name="hintNameRegister">Nombre</string>
    <string name="hintIdnetificationeRegister">Identificacion</string>
    <string name="hintEmailRegister">Email</string>
    <string name="hintPasswordRegister">Password</string>
    <string name="hintAddressRegister">Dirección</string>
    <string name="hintPhoneNumberRegister">Telefono</string>
    <string name="btnRegister">Registrarse</string>

    <!-- ProductDetails Strings-->
    <string name="titleListProduct">Productos</string>

    <!-- ProductDetails Strings-->
    <string name="titleProductDetail">Detalles</string>
    <string name="textViewPriceProductDetail">Precio</string>
    <string name="btnBuyProductDetail">Comprar</string>
    <string name="textViewDescriptionProductDetail">Descripción</string>
    <string name="title_activity_core_vises">CoreVisesActivity</string>

    <!-- Nav Header core vises-->
    <string name="titleNavHeader">CoreVises ©</string>

    <!--Log out fragment-->
    <string name="titleLogOut">Cerrar Sesión</string>
    <string name="messageLogOut">¿Esta seguro que desea salir?</string>
    <string name="btnLogOut">Aceptar</string>
    <string name="btnCancelLogOut">Cancelar</string>

    <!-- Fragment product list-->
    <string name="hintSearch">Buscador</string>
    <string name="btnSearch">Buscar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
