<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cr.ac.ucr.app_proyecto_i_aplicada.RegisterActivity">

    <include layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/registerToolbar"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerToolbar">


        <EditText
            android:id="@+id/etIdenticationRegister"
            style="@style/editText_Style"
            android:hint="@string/hintIdnetificationeRegister"
            android:inputType= "phone" />

        <EditText
            android:id="@+id/etNameRegister"
            style="@style/editText_Style"
            android:inputType="textPersonName"
            android:hint="@string/hintNameRegister"/>

        <EditText
            android:id="@+id/etEmailRegister"
            style="@style/editText_Style"
            android:inputType="textEmailAddress"
            android:hint="@string/hintEmailRegister"/>

        <in.anshul.libray.PasswordEditText
            android:id="@+id/etPasswordRegister"
            style="@style/editText_Style"
            android:inputType="textPassword"
            android:hint="@string/hintPasswordRegister"
            app:password_visible="false"
            app:show_drawable="@drawable/show_password_icon"
            app:hide_drawable="@drawable/hide_password_icon"
            android:paddingRight="10dp"/>

        <EditText
            android:id="@+id/etAddressRegister"
            style="@style/editText_Style"
            android:inputType="textPersonName"
            android:hint="@string/hintAddressRegister"/>


        <EditText
            android:id="@+id/etPhoneRegister"
            style="@style/editText_Style"
            android:inputType="phone"
            android:hint="@string/hintPhoneNumberRegister"/>

        <Button
            android:id="@+id/btnRegister"
            style="@style/button_Style"
            android:background="@color/colorAccent"
            android:text="@string/btnRegister" />

    </LinearLayout>
</RelativeLayout>
